hphp/hack/test/typecheck/constraints/class_variable.php.exp
File "class_variable.php", line 6, characters 24-41:
Some type arguments violate their constraints (Typing[4323])
  File "class_variable.php", line 3, characters 22-22:
  `T` is a constrained type parameter
  File "class_variable.php", line 3, characters 27-29:
  This type constraint is violated
  File "class_variable.php", line 3, characters 27-29:
  Expected `num`
  File "class_variable.php", line 6, characters 35-40:
  But got `string`
