hphp/hack/test/typecheck/constraints/class_variable.php
<?hh

interface Constraint<T as num> {}

class InvalidConstraint {
  public ?(function(): Constraint<string>) $x = null;
}
